Scrollbar styled, mobile view fixed, error page added.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -47,6 +47,7 @@
         backdrop-filter: blur(24px);
         border-radius: 16px;
         padding: 1em 2em;
+        overflow-x: hidden;
     }
     .centered{
         display: flex;
